@@ -122,7 +122,7 @@
 - (BOOL)writeMakefile
 {
   PCMakefileFactory *mf = [PCMakefileFactory sharedFactory];
-  int               i,count;
+  NSUInteger        i,count;
   NSString          *mfl = nil;
   NSData            *mfd = nil;
   NSString          *key = nil;
@@ -153,11 +153,11 @@
     }
   // Remove localized resource files from gathered array
   localizedResources = [projectDict objectForKey:PCLocalizedResources];
-  for (i = [resources count] - 1; i >= 0; i--)
+  for (i = [resources count]; i > 0; i--)
     {
-      if ([localizedResources containsObject:[resources objectAtIndex:i]])
+      if ([localizedResources containsObject:[resources objectAtIndex:i-1]])
 	{
-	  [resources removeObjectAtIndex:i];
+	  [resources removeObjectAtIndex:i-1];
 	}
     }
   [mf appendResources:resources inDir:@"Resources"];
